update: next step

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <div class="overlay">
             <h1>🎄 Karácsonyi ajnádékutalvány 🎄</h1>
             <p>
-                Ezzel a kuponnal egy kiadós utókarácsonyi lakomára vagy hivatalos, ahol garantáltan jóllakhatsz!
+                Ezzel a kuponnal egy kiadós utókarácsonyi lakomára vagy hivatalos 2025.01.04. 11:30 -tól! Kattints a csirkecombra!
             </p>
         </div>
         <img src="/trofea-grill-etterem-bufe.jpg" alt="Trófea étterem">
     </div>
-    <a href="https://maps.app.goo.gl/HkCCdrBEsXj4tKMH6" target="_blank"><span id="chicken">🍗</span></a>
+    <div id="bottomPart">
+        <p>Puszi: Alex, Kyra, Mirci</p>
+        <a href="https://maps.app.goo.gl/HkCCdrBEsXj4tKMH6" target="_blank"><span id="chicken">🍗</span></a>
+    </div>
     <script type="module" src="/src/main.js"></script>
 </body>
 
