--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="overlay">
-            <h1>🎄 Karácsonyi ajnádékutalvány 🎄</h1>
+            <h1>🎄 Karácsonyi ajándékutalvány 🎄</h1>
             <p>
                 Ezzel a kuponnal egy kiadós utókarácsonyi lakomára vagy hivatalos 2025.01.04. 11:30 -tól! Kattints a csirkecombra!
             </p>
